--- a/02-bases/bases/src/app/heroes/hero/hero.component.html
+++ b/02-bases/bases/src/app/heroes/hero/hero.component.html
@@ -1,6 +1,4 @@
 
-<h1>Spiderman</h1>
-
 <dl>
   <td>Nombre:</td>
   <dd>{{ name }}</dd>
@@ -12,14 +10,22 @@
   <dd> {{ getHeroDescription() }} </dd>
 
   <td>Capitalizado:</td>
-  <dd> nombre capitalizado</dd>
+  <dd> {{ capitalizedName }} </dd>
 
 </dl>
 
-<button class="btn btn-primary mx-2">
+<button
+  *ngIf=" name !== 'Spiderman' "
+  (click)="changeHero()"
+  class="btn btn-primary mx-2"
+>
   Cambiar nombre
 </button>
 
-<button class="btn btn-primary">
+<button
+  *ngIf="age !== 25"
+  (click)="changeAge()"
+  class="btn btn-primary"
+>
   Cambiar edad
 </button>
