--- a/02-bases/bases/src/app/dbz/components/list/list.component.html
+++ b/02-bases/bases/src/app/dbz/components/list/list.component.html
@@ -1,5 +1,14 @@
 <h4>Listado</h4>
 <ul class="list-group">
-  <li class="list-group-item">Krillin - 500</li>
-  <li class="list-group-item">Goku - 10,000</li>
+  <li *ngFor="let character of characterList; let i = index"
+    class="list-group-item"
+  >
+    <span> {{ i + 1 }}. </span>
+    <span>{{ character.name }}</span>
+    <strong> Power </strong>
+    <span>{{ character.power }}</span>
+  </li>
 </ul>
+
+<!-- En el *ngFor se recorre el array por el nombre que este publicado dentro del ts al component que corresponde -->
+<!-- Se crea una variable para extraer el index del array -->
