Se ve el FormsModule y ngModel

--- a/02-bases/bases/src/app/dbz/components/list/list.component.html
+++ b/02-bases/bases/src/app/dbz/components/list/list.component.html
@@ -23,3 +23,4 @@
 <!-- En el *ngFor se recorre el array por el nombre que este publicado dentro del ts al component que corresponde -->
 <!-- Se crea una variable para extraer el index del array, se crean las demas variables para tener acceso a otras funcionalidades del *ngFor -->
 <!-- ngClass = Le dice a angular que tenga la clase de forma condicional, [] cualquier dependencia que se pase entre corcehtes lleva un igual un signo de comillas "" y un corcheteque que indica una expresion JS  -->
+<!-- [] esto es para indicar atributos y lo que este dentro de () es para indicar eventos -->
