--- a/02-bases/bases/src/app/dbz/components/add-character/add-character.component.html
+++ b/02-bases/bases/src/app/dbz/components/add-character/add-character.component.html
@@ -1,8 +1,23 @@
 <h4>Agregar Personaje</h4>
 
 <form class="row">
-  <input type="text" class="form-control mb-2" placeholder="Nombre" />
-  <input type="text" class="form-control mb-2" placeholder="Poder" />
+  <input
+    type="text"
+    [(ngModel)]="character.name"
+    name="name"
+    class="form-control mb-2"
+    placeholder="Nombre"
+  />
+  <input
+    type="text"
+    [(ngModel)]="character.power"
+    name="power"
+    class="form-control mb-2"
+    placeholder="Poder"
+  />
 
-  <button type="submit" class="btn btn-primary">Agregar</button>
+  <button type="submit" class="btn btn-primary" (click)="emitCharacter()" >Agregar</button>
 </form>
+
+<pre>{{ character | json }}</pre> <!-- Se empieza a ver el primer pipe, para esto se pasa un | y se escribe el formato a verlo (?) -->
+
