--- a/02-bases/bases/src/app/dbz/components/add-character/add-character.component.html
+++ b/02-bases/bases/src/app/dbz/components/add-character/add-character.component.html
@@ -1,6 +1,6 @@
 <h4>Agregar Personaje</h4>
 
-<form class="row">
+<form class="row" (ngSubmit)="emitCharacter()">
   <input
     type="text"
     [(ngModel)]="character.name"
@@ -16,7 +16,7 @@
     placeholder="Poder"
   />
 
-  <button type="submit" class="btn btn-primary" (click)="emitCharacter()" >Agregar</button>
+  <button type="submit" class="btn btn-primary">Agregar</button>
 </form>
 
 <pre>{{ character | json }}</pre> <!-- Se empieza a ver el primer pipe, para esto se pasa un | y se escribe el formato a verlo (?) -->
