--- a/02-bases/bases/src/app/dbz/components/add-character/add-character.component.html
+++ b/02-bases/bases/src/app/dbz/components/add-character/add-character.component.html
@@ -19,5 +19,5 @@
   <button type="submit" class="btn btn-primary">Agregar</button>
 </form>
 
-<pre>{{ character | json }}</pre> <!-- Se empieza a ver el primer pipe, para esto se pasa un | y se escribe el formato a verlo (?) -->
+<!-- <pre>{{ character | json }}</pre> Se empieza a ver el primer pipe, para esto se pasa un | y se escribe el formato a verlo (?) -->
 
