--- a/02-bases/bases/src/app/dbz/pages/main-page/main-page.component.html
+++ b/02-bases/bases/src/app/dbz/pages/main-page/main-page.component.html
@@ -4,13 +4,13 @@
 <div class="row">
   <div class="col">
 
-    <dbz-list [characterList]="dbzService.characters" (onDelete)="dbzService.onDeleteCharacter($event)"></dbz-list>
+    <dbz-list [characterList]="dbzService.characters" (onDelete)="dbzService.deleteCharacterById($event)"></dbz-list>
 
   </div>
 
   <div class="col">
 
-    <dbz-add-character (onNewCharacter)="dbzService.onNewCharacter($event)" ></dbz-add-character>
+    <dbz-add-character (onNewCharacter)="dbzService.onNewCharacter($event)"></dbz-add-character>
 
   </div>
 
