--- a/03-gifs-app/src/app/app.component.html
+++ b/03-gifs-app/src/app/app.component.html
@@ -1,4 +1,9 @@
 
 
-<h1>Hola Mundo</h1>
+<div class="d-flex">
+<!-- Sidebar -->
+<shared-sidebard></shared-sidebard>
+
+<!-- Home Page -->
+</div>
 
