--- a/03-gifs-app/src/app/gifs/components/card-list/card-list.component.html
+++ b/03-gifs-app/src/app/gifs/components/card-list/card-list.component.html
@@ -1,7 +1,13 @@
 
 <div class="row">
 
-  <div *ngFor="let gif of gifs" class="col-md-3 col-sm-6">
+  <gifs-card
+    *ngFor="let gif of gifs"
+    [gif]="gif"
+    class="col-md-3 col-sm-6"
+  ></gifs-card>
+
+  <!-- <div *ngFor="let gif of gifs" class="col-md-3 col-sm-6">
 
     <div class="card mb-2 text-center bg-dark">
 
@@ -20,7 +26,7 @@
 
     </div>
 
-  </div>
+  </div> -->
 
 
 </div>
