Se termina la parte de diseño para el lazy load de las imagenes, se crea el componente del lazy-image y se modifica el shared y gif module

--- a/03-gifs-app/src/app/gifs/components/gifs-card/gifs-card.component.html
+++ b/03-gifs-app/src/app/gifs/components/gifs-card/gifs-card.component.html
@@ -1,13 +1,14 @@
 <div class="card mb-2 text-center bg-dark">
-  <img
+  <lazy-image></lazy-image>
+  <!-- <img
     [src]="gif.images.downsized_medium.url"
     [alt]="gif.title"
     class="card-img-top"
-  />
+  /> -->
 
-  <div class="card-body text-white">
+  <div class="card-body text-white text-center">
     <p class="card-text">
-      {{ gif.title }}
+      {{ gif.title || 'No title' }}
     </p>
   </div>
 </div>
