--- a/03-gifs-app/src/app/gifs/components/gifs-card/gifs-card.component.html
+++ b/03-gifs-app/src/app/gifs/components/gifs-card/gifs-card.component.html
@@ -1,5 +1,9 @@
 <div class="card mb-2 text-center bg-dark">
-  <lazy-image></lazy-image>
+  <lazy-image
+    [url]="gif.images.downsized_medium.url"
+    [alt]="gif.title || 'No name'"
+  >
+  </lazy-image>
   <!-- <img
     [src]="gif.images.downsized_medium.url"
     [alt]="gif.title"
