--- a/04-countryApp/src/app/app.component.html
+++ b/04-countryApp/src/app/app.component.html
@@ -6,6 +6,11 @@
 
   <div class="col">
     <!-- Nuestras páginas -->
-    router
+    <!-- <shared-home-page></shared-home-page> -->
+    <!-- <shared-about-page></shared-about-page> -->
+    <router-outlet></router-outlet>
   </div>
 </div>
+
+
+<!-- El router-outlet despliega dependiendo la url las vistas a mostrar -->
