Se realiza la opciones de RouterLink y RouterLinkOptions y se agrega una nueva ruta

--- a/04-countryApp/src/app/app.component.html
+++ b/04-countryApp/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="row mt-4">
   <div class="col-3">
     <!-- Sidebar -->
-    sidebard
+    <shared-sidebard></shared-sidebard>
   </div>
 
   <div class="col">
