--- a/04-countryApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/04-countryApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -4,7 +4,11 @@
 <div class="row">
   <div class="col">
     <!-- SearchBox -->
-    <shared-search-box placeholder="Buscar Por Capital"></shared-search-box>
+    <shared-search-box
+      placeholder="Buscar Por Capital"
+      (onListenChild)="searchByCapital($event)"
+    >
+    </shared-search-box>
   </div>
 </div>
 
