Se hace la tarea de pais y region y se agregan varios archivos

--- a/04-countryApp/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/04-countryApp/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -1,1 +1,21 @@
-<p>by-country-page works!</p>
+<h2>Por Pais</h2>
+<hr>
+
+<div class="row">
+  <div class="col">
+    <!-- SearchBox -->
+    <shared-search-box
+      placeholder="Buscar Por Pais"
+      (onListenChild)="searchByCounrty($event)"
+    >
+    </shared-search-box>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col">
+    <hr>
+    <!-- <countries-country-table [countries]="countries"></countries-country-table> -->
+    <countries-country-ntable [countries]="countries"></countries-country-ntable>
+  </div>
+</div>
