--- a/04-countryApp/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/04-countryApp/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -1,1 +1,20 @@
-<p>by-region-page works!</p>
+<h2>Por Region</h2>
+<hr>
+
+<div class="row">
+  <div class="col">
+    <!-- SearchBox -->
+    <shared-search-box
+      placeholder="Buscar Por Region"
+      (onListenChild)="searchByRegion($event)"
+    >
+    </shared-search-box>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col">
+    <hr>
+      <countries-region-table [regiones]="regiones"></countries-region-table>
+  </div>
+</div>
