Se configura el service y las tablas y las pages para el manejo de las peticiones

--- a/04-countryApp/src/app/countries/components/country-table/country-table.component.html
+++ b/04-countryApp/src/app/countries/components/country-table/country-table.component.html
@@ -11,6 +11,7 @@
         <th>Icon</th>
         <th>Bandera</th>
         <th>Nombre</th>
+        <th>Capital</th>
         <th>Poblacion</th>
         <!-- <th></th> -->
       </tr>
