Se termina de resolver el debounce para cuando se deje de escribir se emita una peticion

--- a/04-countryApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/04-countryApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -4,9 +4,10 @@
 <div class="row">
   <div class="col">
     <!-- SearchBox -->
+    <!-- (onListenChild)="searchByCapital($event)" -->
     <shared-search-box
+      (onDebounce)="searchByCapital($event)"
       placeholder="Buscar Por Capital"
-      (onListenChild)="searchByCapital($event)"
     >
     </shared-search-box>
   </div>
