Se optimiza la busqueda por region

--- a/04-countryApp/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/04-countryApp/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -4,9 +4,10 @@
 <div class="row">
   <div class="col">
     <!-- SearchBox -->
+    <!-- (onListenChild)="searchByCounrty($event)" -->
     <shared-search-box
+      (onDebounce)="searchByCounrty($event)"
       placeholder="Buscar Por Pais"
-      (onListenChild)="searchByCounrty($event)"
     >
     </shared-search-box>
   </div>
