--- a/04-countryApp/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/04-countryApp/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -2,13 +2,21 @@
 <hr>
 
 <div class="row">
-  <div class="col">
+  <div class="col text-center">
     <!-- SearchBox -->
-    <shared-search-box
+    <!-- (onListenChild)="searchByRegion($event)" -->
+    <!-- (onDebounce)="searchByRegion($event)" -->
+    <!-- <shared-search-box
       placeholder="Buscar Por Region"
-      (onListenChild)="searchByRegion($event)"
     >
-    </shared-search-box>
+    </shared-search-box> -->
+    <button *ngFor="let region of regions"
+      class="btn mx-2"
+      [ngClass]="{ 'btn-outline-primary': selectedRegion === region }"
+      (click)="searchByRegion(region)"
+    >
+    {{ region }}
+    </button>
   </div>
 </div>
 
