--- a/04-countryApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/04-countryApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -7,6 +7,7 @@
     <!-- (onListenChild)="searchByCapital($event)" -->
     <shared-search-box
       (onDebounce)="searchByCapital($event)"
+      [initialValue]="initialValue"
       placeholder="Buscar Por Capital"
     >
     </shared-search-box>
