--- a/04-countryApp/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/04-countryApp/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -7,6 +7,7 @@
     <!-- (onListenChild)="searchByCounrty($event)" -->
     <shared-search-box
       (onDebounce)="searchByCounrty($event)"
+      [initialValue]="initialValue"
       placeholder="Buscar Por Pais"
     >
     </shared-search-box>
@@ -17,6 +18,7 @@
   <div class="col">
     <hr>
     <!-- <countries-country-table [countries]="countries"></countries-country-table> -->
+    <shared-loading-spinner *ngIf="isLoading"></shared-loading-spinner>
     <countries-country-ntable [countries]="countries"></countries-country-ntable>
   </div>
 </div>
