--- a/04-countryApp/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/04-countryApp/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -23,6 +23,7 @@
 <div class="row">
   <div class="col">
     <hr>
+      <shared-loading-spinner *ngIf="isLoading"></shared-loading-spinner>
       <countries-region-table [regiones]="regiones"></countries-region-table>
   </div>
 </div>
