--- a/todo-list-app-redux-standalone/src/app/components/list/list.component.html
+++ b/todo-list-app-redux-standalone/src/app/components/list/list.component.html
@@ -3,12 +3,15 @@
     <h1 class="text-3xl font-bold">ToDo App con Angular + Redux</h1>
     <div class="mt-4 flex">
       <input
+        [formControl]="formCtrl"
         class="w-80 border-b-2 px-2 py-1 border-gray-500 text-black"
         type="text"
         placeholder="Enter your task here"
       />
       <button
-        class="ml-2 border-2 border-green-500 p-2 text-green-500 hover:text-white hover:bg-green-500 rounded-lg flex"
+        (click)="addTask()"
+        [disabled]="formCtrl.invalid"
+        class="ml-2 border-2 border-green-500 p-2 text-green-500 hover:text-white hover:bg-green-500 rounded-lg flex disabled:opacity-80"
       >
         <svg
           class="h-6 w-6"
@@ -32,7 +35,7 @@
   </div>
   <div class="mt-8">
     <ul>
-      <app-task></app-task>
+      <app-task *ngFor="let task of tasks()" [task]="task"></app-task>
     </ul>
   </div>
   <div class="mt-8">
