Se termina de comentar funciones del proyecto

--- a/todo-list-app-redux-standalone/src/app/components/list/list.component.html
+++ b/todo-list-app-redux-standalone/src/app/components/list/list.component.html
@@ -39,10 +39,10 @@
     </ul>
   </div>
   <div class="mt-8">
-    <button class="border-2 border-red-500 p-2 text-red-500">
+    <button (click)="removeAllTask()" class="border-2 border-red-500 p-2 text-red-500">
       Clear Completed Task
     </button>
-    <button class="border-2 border-indigo-500 p-2 text-indigo-500 ml-4">
+    <button (click)="resetTask()" class="border-2 border-indigo-500 p-2 text-indigo-500 ml-4">
       Reset Todo List
     </button>
   </div>
