--- a/06-heroesApp/src/app/auth/pages/layout-page/layout-page.component.html
+++ b/06-heroesApp/src/app/auth/pages/layout-page/layout-page.component.html
@@ -1,3 +1,7 @@
-<p>layout-page works!</p>
-<!-- En el router outlet renderizamos las rutas hijas -->
-<router-outlet></router-outlet>
+
+<div class="grid p-3">
+  <div class="col-12 mt-5 md:col-6 md:col-offset-3 md:mt-8">
+    <!-- En el router outlet renderizamos las rutas hijas -->
+    <router-outlet></router-outlet>
+  </div>
+</div>
