--- a/06-heroesApp/src/app/heroes/pages/layout-page/layout-page.component.html
+++ b/06-heroesApp/src/app/heroes/pages/layout-page/layout-page.component.html
@@ -9,6 +9,18 @@
       </button>
 
     </mat-toolbar>
+
+    <mat-nav-list>
+      <mat-list-item
+      *ngFor="let item of sidebarItems"
+      [routerLink]="item.url"
+      (click)="sidenav.toggle()"
+      >
+        <mat-icon matListItemIcon>{{ item.icon }}</mat-icon>
+        {{ item.label }}
+      </mat-list-item>
+    </mat-nav-list>
+
   </mat-sidenav>
 
   <mat-toolbar color="primary">
