--- a/06-heroesApp/src/app/heroes/pages/layout-page/layout-page.component.html
+++ b/06-heroesApp/src/app/heroes/pages/layout-page/layout-page.component.html
@@ -36,7 +36,7 @@
 
   </mat-toolbar>
 
-  <div class="container">
+  <div class="container p-2">
     <!-- En el router outlet renderizamos las rutas hijas -->
     <router-outlet></router-outlet>
   </div>
