--- a/06-heroesApp/src/app/heroes/pages/hero-page/hero-page.component.html
+++ b/06-heroesApp/src/app/heroes/pages/hero-page/hero-page.component.html
@@ -1,1 +1,12 @@
-<p>hero-page works!</p>
+
+<ng-template #divLoading>
+  <mat-grid-list cols="1">
+    <mat-grid-tile>
+      <mat-spinner></mat-spinner>
+    </mat-grid-tile>
+  </mat-grid-list>
+</ng-template>
+
+<div *ngIf="hero; else divLoading" class="grid">
+  {{ hero | json }}
+</div>
