Se conecta el formulario con el html de este

--- a/06-heroesApp/src/app/heroes/pages/new-page/new-page.component.html
+++ b/06-heroesApp/src/app/heroes/pages/new-page/new-page.component.html
@@ -12,13 +12,14 @@
     <mat-card>
       <mat-card-content>
 
-        <div class="grid">
+        <form class="grid" [formGroup]="heroForm" (ngSubmit)="onSubmit()">
           <mat-form-field class="col-12 sm:col-6">
             <mat-label>Super heróe</mat-label>
             <input
               matInput
               type="text"
               required
+              formControlName="superhero"
             />
           </mat-form-field>
 
@@ -28,6 +29,7 @@
               matInput
               type="text"
               required
+              formControlName="alter_ego"
             />
           </mat-form-field>
 
@@ -37,6 +39,7 @@
               matInput
               type="text"
               required
+              formControlName="first_appearance"
             />
           </mat-form-field>
 
@@ -46,19 +49,32 @@
               matInput
               type="text"
               required
+              formControlName="characters"
             />
           </mat-form-field>
 
           <mat-form-field class="col-12">
             <mat-label>Creador</mat-label>
-            <mat-select required="">
+            <mat-select
+              required
+              formControlName="publisher"
+            >
               <mat-option *ngFor=" let options of publishers" [value]="options.id">
                 {{ options.desc }}
               </mat-option>
             </mat-select>
           </mat-form-field>
 
-        </div>
+          <mat-form-field class="col-12 sm:col-6">
+            <mat-label>Alternative Image</mat-label>
+            <input
+              matInput
+              type="text"
+              formControlName="alt_img"
+            />
+          </mat-form-field>
+
+        </form>
 
         <div class="flex justify-content-between">
           <button
@@ -70,6 +86,7 @@
           <button
             mat-flat-button
             color="primary"
+            (click)="onSubmit()"
           >
             <mat-icon>save</mat-icon>
             Guardar
@@ -85,3 +102,7 @@
   </div>
 
 </div>
+
+<!--
+  El formControlName es para apuntar a los campos dentro del FormGroup
+ -->
