Se realiza getter en el componente, y se hacen las funciones de actualizar y crear heroes

--- a/06-heroesApp/src/app/heroes/pages/new-page/new-page.component.html
+++ b/06-heroesApp/src/app/heroes/pages/new-page/new-page.component.html
@@ -98,10 +98,14 @@
   </div>
 
   <div class="col-12 sm:col-6">
-    <img src="" alt="imagen del héroe" mat-card-image/>
+    <img [src]=" currentHero | heroImage " alt="imagen del héroe" mat-card-image/>
   </div>
 
 </div>
+
+<!-- <pre>
+  {{ currentHero | json }}
+</pre> -->
 
 <!--
   El formControlName es para apuntar a los campos dentro del FormGroup
