--- a/06-heroesApp/src/app/heroes/pages/new-page/new-page.component.html
+++ b/06-heroesApp/src/app/heroes/pages/new-page/new-page.component.html
@@ -1,7 +1,6 @@
 <h1>
-  Editar / Agregar
+  {{ currentHero.id ? 'Editar':'Agregar' }}
   Heróe
-  <small>Superman</small>
 </h1>
 
 <mat-divider class="mb-2"></mat-divider>
@@ -78,11 +77,13 @@
 
         <div class="flex justify-content-between">
           <button
+            *ngIf="currentHero.id"
             mat-flat-button
             color="warn"
           >
             Borrar
           </button>
+          <span></span>
           <button
             mat-flat-button
             color="primary"
@@ -92,7 +93,6 @@
             Guardar
           </button>
         </div>
-
       </mat-card-content>
     </mat-card>
   </div>
