--- a/06-heroesApp/src/app/heroes/pages/layout-page/layout-page.component.html
+++ b/06-heroesApp/src/app/heroes/pages/layout-page/layout-page.component.html
@@ -4,6 +4,7 @@
     <mat-toolbar>
       <span>Menú</span>
       <span class="spacer"></span>
+      <span>{{ user?.user }}</span>
       <button mat-icon-button (click)="sidenav.toggle()">
         <mat-icon>menu</mat-icon>
       </button>
@@ -30,7 +31,10 @@
 
     <span class="spacer"></span>
 
-    <button mat-button>
+    <button
+      mat-button
+      (click)="onLogout()"
+    >
       Logout
     </button>
 
