--- a/06-heroesApp/src/app/heroes/pages/layout-page/layout-page.component.html
+++ b/06-heroesApp/src/app/heroes/pages/layout-page/layout-page.component.html
@@ -4,7 +4,7 @@
     <mat-toolbar>
       <span>Menú</span>
       <span class="spacer"></span>
-      <span>{{ user?.user }}</span>
+      <span>{{ user?.email }}</span>
       <button mat-icon-button (click)="sidenav.toggle()">
         <mat-icon>menu</mat-icon>
       </button>
