--- a/07-formApp/src/app/reactive/pages/basicPage/basicPage.component.html
+++ b/07-formApp/src/app/reactive/pages/basicPage/basicPage.component.html
@@ -16,10 +16,18 @@
                            formControlName="name"
                            placeholder="Nombre del producto">
 
-                    <span class="form-text text-danger">
+                    <span *ngIf="isValidField('name')"
+                      class="form-text text-danger"
+                    >
                         <!-- Debe de ser de 3 letras -->
-                        error message
+                        {{ getFieldError('name') }}
                     </span>
+                    <!-- <span *ngIf="myForm.controls['name'].getError('minlength') && myForm.controls['name'].touched"
+                      class="form-text text-danger"
+                    >
+                        Debe de ser de 3 letras
+                        error message
+                    </span> -->
                 </div>
             </div>
 
@@ -31,7 +39,7 @@
                            class="form-control"
                            formControlName="price"
                            placeholder="Precio del producto">
-                    <span class="form-text text-danger">
+                    <span *ngIf="isValidField('price')" class="form-text text-danger">
                         El precio debe de ser 0 o mayor
                     </span>
                 </div>
@@ -46,7 +54,7 @@
                            formControlName="inStorage"
                            placeholder="Existencias del producto">
 
-                    <span class="form-text text-danger">
+                    <span *ngIf="isValidField('inStorage')" class="form-text text-danger">
                          Las existencias deben de ser 0 o mayor
                     </span>
                 </div>
